<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".googlemaps.MapsActivity" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_notification_center"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/notification_center"
        android:src="@drawable/notif_none"
        app:tint="@null"
        app:backgroundTint="?attr/relativeLayoutBackground"
        app:maxImageSize="40dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_refresh"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/refresh_map"
        android:src="@drawable/refresh"
        app:tint="@null"
        app:backgroundTint="?attr/relativeLayoutBackground"
        app:maxImageSize="40dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/linearlayout"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/settings"
        android:src="@drawable/settings"
        app:tint="@null"
        app:backgroundTint="?attr/relativeLayoutBackground"
        app:maxImageSize="40dp" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:background="@drawable/border"
        android:showDividers="middle"
        android:divider="?android:attr/dividerHorizontal">

        <ImageView
            android:id="@+id/actus"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/twitter_icon"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:padding="8dp"
            android:layout_marginEnd="1dp"
            android:background="?attr/relativeLayoutBackground"
            android:contentDescription="@string/twitter" />

        <ImageView
            android:id="@+id/snap"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/camera_icon"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:padding="8dp"
            android:layout_marginEnd="1dp"
            android:background="?attr/relativeLayoutBackground"
            android:contentDescription="@string/snap" />

        <ImageView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/history_icon"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:padding="8dp"
            android:background="?attr/relativeLayoutBackground"
            android:contentDescription="@string/historique" />
    </LinearLayout>

</RelativeLayout>