<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notification_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/notification_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/notification_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/action_buttons_container">

        <TextView
            android:id="@+id/approve_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approuver"
            android:textColor="?attr/colorPrimary"
            android:clickable="true" />

        <TextView
            android:id="@+id/reject_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rejeter"
            android:textColor="?attr/colorPrimary"
            android:clickable="true"
            android:layout_marginStart="16dp" />
    </LinearLayout>


</LinearLayout>
